# task-6-onxp

./: README.md  pyproject.toml  shell.nix
src/api/: urls.py  views.py
src/authentication/: urls.py  views.py
src/authentication/templates/authentication/: index.html
src/base/templates/base/: base.html
src/base/templates/blog/: blog_list.html
src/base/templates/components/: nav_item.html
src/blog/: urls.py  views.py
src/blog/templates/blog/: index.html
src/django_web/: settings.py  urls.py
src/landing/: urls.py  views.py
src/landing/templates/landing/: index.html
src/theme/static_src/: package-lock.json
src/theme/static_src/src/: styles.css
