[project]
name = "meet_6"
version = "0.1.0"
description = ""
authors = [
    {name = "danggro", email = "anangdwin55@gmail.com"},
]
dependencies = [
    "django>=5.0.2",
    "djlint>=1.34.1",
    "django-tailwind[reload]>=3.8.0",
    "django-htmx>=1.17.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
